<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/nameTextView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            android:contentDescription="@string/photoname"
            android:transitionName="photo"/>

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nameTextView"
            app:layout_constraintBottom_toTopOf="@+id/descTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="4dp"
            android:transitionName="name"/>
    <TextView
            android:text="@string/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/descTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:transitionName="detail"/>
</androidx.constraintlayout.widget.ConstraintLayout>