<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UploadActivity">


    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/previewImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp" android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" app:layout_constraintBottom_toTopOf="@+id/guideline3"
            android:contentDescription="@string/photoname"/>
    <Button
            android:text="@string/camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/cameraXButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/galleryButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/previewImageView"/>
    <Button
            android:text="@string/upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/uploadButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="208dp" android:id="@+id/guideline2"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="358dp" android:id="@+id/guideline3"/>
    <com.example.myapplication.customview.UsernameET
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/descEditTextTextMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/uploadButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cameraXButton" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:hint="@string/desc"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/previewImageView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
